classDiagram

%% =========================
%% Core Domain Entities
%% =========================

    class User {
        -UUID userId
        -String email
        -String passwordHash
        -String firstName
        -String lastName
        +updateProfile()
    }

    class Role {
        -UUID roleId
        -String roleName
    }

    class Session {
        -UUID sessionId
        -String accessToken
        -DateTime expiresAt
        +isValid()
    }

    class TradingAccount {
        -UUID accountId
        -AccountType type
        -Decimal cashBalance
        -AccountStatus status
        +depositFunds()
        +withdrawFunds()
    }

    class Instrument {
        -String symbol
        -String name
        -InstrumentType type
    }

    class Order {
        -UUID orderId
        -OrderSide side
        -OrderType type
        -Integer quantity
        -Decimal price
        -OrderStatus status
        +cancel()
    }

    class Trade {
        -UUID tradeId
        -Integer executedQty
        -Decimal executionPrice
        -DateTime executedAt
    }

    class Holding {
        -UUID holdingId
        -Integer quantity
        -Decimal averageCost
        +updatePosition()
    }

    class TransactionRecord {
        -UUID transactionId
        -TransactionType type
        -Decimal amount
        -DateTime timestamp
    }

    class Watchlist {
        -UUID watchlistId
        -String name
        +addInstrument()
        +removeInstrument()
    }

    class Notification {
        -UUID notificationId
        -String message
        -Boolean isRead
        +markRead()
    }


%% =========================
%% Service Interfaces
%% =========================

    class AuthenticationService {
        <<interface>>
        +authenticate(email, password)
        +logout(sessionId)
        +refreshSession(sessionId)
    }

    class OrderService {
        <<interface>>
        +submitOrder(accountId, order)
        +cancelOrder(orderId)
        +getOrders(accountId)
    }

    class AccountService {
        <<interface>>
        +deposit(accountId, amount)
        +withdraw(accountId, amount)
    }

    class FeeCalculator {
        <<interface>>
        +calculate(order, instrument)
    }


%% =========================
%% Repository Interfaces
%% =========================

    class OrderRepository {
        <<interface>>
        +save(order)
        +findById(orderId)
        +findByAccountId(accountId)
        +delete(orderId)
    }

    class AccountRepository {
        <<interface>>
        +save(account)
        +findById(accountId)
    }

    class UserRepository {
        <<interface>>
        +save(user)
        +findById(userId)
        +findByEmail(email)
    }


%% =========================
%% Service Implementations
%% =========================

    class TradingOrderService {
        -OrderRepository orderRepository
        -AccountRepository accountRepository
        -FeeCalculator feeCalculator
        +submitOrder(accountId, order)
        +cancelOrder(orderId)
        +getOrders(accountId)
    }

    class TradingAccountService {
        -AccountRepository accountRepository
        +deposit(accountId, amount)
        +withdraw(accountId, amount)
    }

    class PasswordAuthenticationService {
        -UserRepository userRepository
        +authenticate(email, password)
        +logout(sessionId)
        +refreshSession(sessionId)
    }

    class InstrumentFeeCalculator {
        +calculate(order, instrument)
    }


%% =========================
%% Repository Implementations
%% =========================

    class DatabaseOrderRepository {
        +save(order)
        +findById(orderId)
        +findByAccountId(accountId)
        +delete(orderId)
    }

    class DatabaseAccountRepository {
        +save(account)
        +findById(accountId)
    }

    class DatabaseUserRepository {
        +save(user)
        +findById(userId)
        +findByEmail(email)
    }


%% =========================
%% Domain Relationships
%% =========================

    User "1" --> "0..*" TradingAccount : owns
    User "1" --> "0..*" Session : creates
    User "0..*" --> "0..*" Role : assigned
    User "1" --> "0..*" Watchlist : manages
    User "1" --> "0..*" Notification : receives

    TradingAccount "1" --> "0..*" Order : places
    TradingAccount "1" --> "0..*" Trade : executes
    TradingAccount "1" --> "0..*" Holding : contains
    TradingAccount "1" --> "0..*" TransactionRecord : records

    Instrument "1" --> "0..*" Order : referenced by
    Instrument "1" --> "0..*" Trade : traded
    Instrument "1" --> "0..*" Holding : held by

    Order "1" --> "0..*" Trade : produces

    Watchlist "0..*" --> "0..*" Instrument : tracks


%% =========================
%% Interface Implementations
%% =========================

    TradingOrderService ..|> OrderService
    TradingAccountService ..|> AccountService
    PasswordAuthenticationService ..|> AuthenticationService
    InstrumentFeeCalculator ..|> FeeCalculator

    DatabaseOrderRepository ..|> OrderRepository
    DatabaseAccountRepository ..|> AccountRepository
    DatabaseUserRepository ..|> UserRepository


%% =========================
%% Dependency Inversion
%% =========================

    TradingOrderService --> OrderRepository
    TradingOrderService --> AccountRepository
    TradingOrderService --> FeeCalculator

    TradingAccountService --> AccountRepository

    PasswordAuthenticationService --> UserRepository